--- a/source/shared/_contact.html.erb
+++ b/source/shared/_contact.html.erb
@@ -58,7 +58,7 @@ $(function(){
     e.preventDefault();
      $.ajax({
       dataType: 'jsonp',
-      url: "http://getsimpleform.com/messages/ajax?form_api_token=81cb829c36da2cf143e614c45266fd93",
+      url: "https://getsimpleform.com/messages/ajax?form_api_token=81cb829c36da2cf143e614c45266fd93",
           data: $("form").serialize()
         }).done(function() {
       //callback which can be used to show a thank you message
