--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,14 +12,14 @@ title: Bienvenue chez Iorgu SPRL
     <div class="col s12 m6">
       <% link_to "stores/bienvenue" do %>
       <%= image_tag 'stores.jpeg', :class=> "responsive-img" %>
-      <p class="center flow-text">Stores</p>
+      <p class="center flow-text">Habillage fenêtre</p>
       <% end %>
     </div>
     <div class="col s12 m6">
       <% link_to "nettoyage/bienvenue" do %>
 
       <%= image_tag 'nettoyage.jpeg', :class=> "responsive-img" %>
-      <p class="center flow-text">Nettoyage</p>
+      <p class="center flow-text">Nettoyage professionnel</p>
       <% end %>
 
 
