--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,6 +11,8 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <%= javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js',"//cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js","all" %>
+    <meta name="description" content="Iorgu sprl, habillage fenêtre et nettoyage" />
+
   </head>
   <body class="grey lighten-4">
     <nav class="white">
