--- a/source/shared/_contact.html.erb
+++ b/source/shared/_contact.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="input-field col s10">
     <textarea id="textarea1" name="text" class="materialize-textarea"></textarea>
-    <label for="textarea1">Qu'avez-vous à nous demander?</label>
+    <label for="textarea1"></label>
   </div>
   <button class="btn waves-effect waves-light" type="submit" name="action">Envoyer
   <i class="material-icons right">send</i>
