--- a/source/stores/bienvenue.html.erb
+++ b/source/stores/bienvenue.html.erb
@@ -3,7 +3,7 @@ title: IORGU SPRL Stores
 
 ---
 
-<h1 class="flow-text center">Les stores</h1>
+<h1 class="flow-text center">Habillage de fenêtre</h1>
 <div class="container">
   <div class="row">
     <div class="col s12 m6">
