--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -30,5 +30,21 @@
     </div>
   </nav>
     <%= yield %>
+      <div class="footer-copyright grey darken-3">
+    <p style="font-size: 10pt;" class='white-text'>Created by Bauduin Jean-Christophe</p>
+  </div>
+</footer>
+
+<style>
+  footer{
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+
+  }
+</style>
+
   </body>
 </html>
