--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -30,9 +30,6 @@
     </div>
   </nav>
     <%= yield %>
-      <div class="footer-copyright grey darken-3">
-    <p style="font-size: 10pt;" class='white-text'>Created by Bauduin Jean-Christophe</p>
-  </div>
 </footer>
 
 <style>
@@ -46,5 +43,21 @@
   }
 </style>
 
+<footer class="page-footer grey darken-2 ">
+<div class="container">
+<div class="row">
+<div class="col m6 s12">
+<p class='white-text'>Mihai Iorgu: <span>mjustin.iorgu@hotmail.com</span></p>
+</div>
+<div class="col m6 s12">
+<p class='white-text'>Contactez-nous par téléphone: 0032 473 384 410</p>
+</div>
+</div>
+</div>
+
+<div class="footer-copyright grey darken-3">
+<p style="font-size: 10pt;" class='white-text'>Created by Bauduin Jean-Christophe</p>
+</div>
+</footer>
   </body>
 </html>
