--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ title: Bienvenue chez Iorgu SPRL
 
 ---
 
-<h1 class="flow-text center">IORGU SPRL</h1>
+<h1 class="flow-text center">Bienvenue chez IORGU SPRL</h1>
 
 <p><br></p>
 <div class="container">
