--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -49,7 +49,7 @@
 <div class="container">
 <div class="row">
 <div class="col m6 s12">
-<p class='white-text'>Mihai Iorgu: <span>mjustin.iorgu@hotmail.com</span></p>
+<p class='white-text'>Justin Mihai Iorgu: <span>mjustin.iorgu@hotmail.com</span></p>
 </div>
 <div class="col m6 s12">
 <p class='white-text'>Contactez-nous par téléphone: 0032 473 384 410</p>
