--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -49,16 +49,16 @@
 <div class="container">
 <div class="row">
 <div class="col m6 s12">
-<p class='white-text'>Justin Mihai Iorgu: <span>mjustin.iorgu@hotmail.com</span></p>
+<p class='white-text' style="font-size: 10pt;">Justin Mihai Iorgu: <span>mjustin.iorgu@hotmail.com</span></p>
 </div>
 <div class="col m6 s12">
-<p class='white-text'>Contactez-nous par téléphone: 0032 473 384 410</p>
+<p class='white-text' style="font-size: 10pt;">Contactez-nous par téléphone: 0032 473 384 410</p>
 </div>
 </div>
 </div>
 
 <div class="footer-copyright grey darken-3">
-<p style="font-size: 10pt;" class='white-text'>Created by Bauduin Jean-Christophe</p>
+<p style="font-size: 6pt;" class='white-text'>Created by Bauduin Jean-Christophe</p>
 </div>
 </footer>
   </body>
