--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -48,17 +48,16 @@
 <footer class="page-footer grey darken-2 ">
 <div class="container">
 <div class="row">
-<div class="col m6 s12">
-<p class='white-text' style="font-size: 10pt;">Justin Mihai Iorgu: <span>mjustin.iorgu@hotmail.com</span></p>
+<div class="col m6 s12" class='white-text' style="font-size: 12pt;color:white;">
+Justin Mihai Iorgu: <span>mjustin.iorgu@hotmail.com</span>
 </div>
-<div class="col m6 s12">
-<p class='white-text' style="font-size: 10pt;">Contactez-nous par téléphone: 0032 473 384 410</p>
+<div class="col m6 s12" class='white-text' style="font-size: 12pt;color:white;">
+Contactez-nous par téléphone: 0032 473 384 410
 </div>
 </div>
 </div>
-
-<div class="footer-copyright grey darken-3">
-<p style="font-size: 6pt;" class='white-text'>Created by Bauduin Jean-Christophe</p>
+<div class="footer-copyright grey darken-3" style="font-size: 8pt;color:grey;" class='white-text'>
+Created by Bauduin Jean-Christophe
 </div>
 </footer>
   </body>
