--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,7 +11,7 @@ title: Bienvenue chez Iorgu SPRL
     <div class="col s12 m6">
       <% link_to "stores/bienvenue" do %>
       <%= image_tag 'stores.jpeg', :class=> "responsive-img" %>
-      <p class="center flow-text">Habillage de fenêtre</p>
+      <p class="center flow-text">Décoration de fenêtre</p>
       <% end %>
     </div>
     <div class="col s12 m6">
