--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -56,11 +56,15 @@
 <footer class="page-footer grey darken-2 ">
 <div class="container">
 <div class="row">
-<div class="col m6 s12" class='white-text' style="font-size: 12pt;color:white;">
-Justin Mihai Iorgu: <span>mjustin.iorgu@hotmail.com</span>
+<div class="col m4 s12" class='white-text' style="font-size: 12pt;color:white;margin-top: 50px;">
+Contact : Justin Mihai Iorgu
 </div>
-<div class="col m6 s12" class='white-text' style="font-size: 12pt;color:white;">
-Contactez-nous par téléphone: 0032 473 384 410
+<div class="col m4 s12" class='white-text' style="font-size: 12pt;color:white;margin-top: 50px;">
+-<span><a href="mailto:mjustin.iorgu@hotmail.com">mjustin.iorgu@hotmail.com</a>
+</span>
+</div>
+<div class="col m4 s12" class='white-text' style="font-size: 12pt;color:white;margin-top: 50px;">
+Contactez-nous par téléphone: <a href="tel://0032 473 384 410">0032 473 384 410</a>
 </div>
 </div>
 </div>
