--- a/source/nettoyage/bienvenue.html.erb
+++ b/source/nettoyage/bienvenue.html.erb
@@ -6,6 +6,15 @@ title: Iorgu SPRL  nettoyage
 <div class="container">
 <div class="row">
 <div class="col s12 m6">
+<p>Avec une expérience de plus de 10 ans dans le nettoyage professionnel, nous vous aidons à maintenir votre
+
+environnement de travail sain, propre et agréable pour votre personnel. L’entretien de bureaux et d’espaces
+
+commerciaux est notre activité principale. <br>
+
+Faites appel a notre équipe de professionnels qui répondra a vos exigences relatives a la maintenance de
+
+vos bureaux et locaux.</p>
 <div class="center">
 <%= image_tag "outils.jpg", :class => "responsive-img center" %>
 </div>
