--- a/source/shared/_contact.html.erb
+++ b/source/shared/_contact.html.erb
@@ -18,6 +18,9 @@
   <input type='text' name='email' >
     <label> votre email</label>
   </div>
+    <input type='text' name='telephone' >
+    <label> votre téléphone</label>
+  </div>
   <div class="input-field col s10">
 
   <input type='text' name='sujet' >
@@ -25,7 +28,7 @@
   </div>
   <div class="input-field col s10">
     <textarea id="textarea1" name="text" class="materialize-textarea"></textarea>
-    <label for="textarea1"></label>
+    <label for="textarea1">Votre message</label>
   </div>
   <button class="btn waves-effect waves-light" type="submit" name="action">Envoyer
   <i class="material-icons right">send</i>
