--- a/source/stores/bienvenue.html.erb
+++ b/source/stores/bienvenue.html.erb
@@ -3,11 +3,19 @@ title: IORGU SPRL Stores
 
 ---
 
-<h1 class="flow-text center">Habillage de fenêtre</h1>
+<h1 class="flow-text center">Décoration de fenêtre</h1>
 <div class="container">
   <div class="row">
     <div class="col s12 m6">
-      <p> Faites appel à notre équipe de spécialistes pour la pose de vos stores. Iorgu SPRL est à votre écoute pour réaliser votre projet exactement comme vous le souhaitez. Nous mettons tout en oeuvre pour vous satisfaire et fournissons un travail de qualité.  </p>
+      <p> Faites appel a nos spécialistes pour la décorations de vos fenêtres: rideaux et voilages, stores américains,
+
+stores vénitiens, stores californiens, stores enrouleurs, panneaux japonais, motorisation
+
+Nous vous proposons un service de placement professionnel, pour toutes mécanisme de stores, motorisé ou
+
+manuel, rails, tringle, cache rails et placement de vos tentures. <br>
+
+Nous mettons tout en oeuvre pour vous satisfaire et nous fournissons un vrai service sur mesure.</p>
       <div class="center">
         <%= image_tag 'stores.jpeg', :class=> "responsive-img" %>
       </div>
