--- a/source/shared/_contact.html.erb
+++ b/source/shared/_contact.html.erb
@@ -18,6 +18,8 @@
   <input type='text' name='email' >
     <label> votre email</label>
   </div>
+  <div class="input-field col s10">
+
     <input type='text' name='telephone' >
     <label> votre téléphone</label>
   </div>
