--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -19,9 +19,8 @@
     <div class="nav-wrapper">
       <a href="/" class="brand-logo center"><%= image_tag "logov2.png",height: 61 %></a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-      <li class="black-text"><%= link_to "A-propos de nous","about",class: "black-text" %></li>
 
-      <% if !current_page.data.navbar.nil? && 1!=1%>
+      <% if !current_page.data.navbar.nil? %>
         <% current_page.data.navbar.each do |link| %>
           <li><%= link_to link,link %></li>
         <% end %>
