--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -59,11 +59,11 @@
 Contact : Justin Mihai Iorgu
 </div>
 <div class="col m4 s12" class='white-text' style="font-size: 12pt;color:white;margin-top: 50px;">
--<span><a href="mailto:mjustin.iorgu@hotmail.com">mjustin.iorgu@hotmail.com</a>
+<span><a href="mailto:mjustin.iorgu@hotmail.com">mjustin.iorgu@hotmail.com</a>
 </span>
 </div>
 <div class="col m4 s12" class='white-text' style="font-size: 12pt;color:white;margin-top: 50px;">
-Contactez-nous par téléphone: <a href="tel://0032 473 384 410">0032 473 384 410</a>
+ <a href="tel://0032 473 384 410">+32 473 384 410</a>
 </div>
 </div>
 </div>
