--- a/source/stores/bienvenue.html.erb
+++ b/source/stores/bienvenue.html.erb
@@ -11,9 +11,9 @@ title: IORGU SPRL Stores
 
 stores vénitiens, stores californiens, stores enrouleurs, panneaux japonais, motorisation
 
-Nous vous proposons un service de placement professionnel, pour toutes mécanisme de stores, motorisé ou
+Nous vous proposons un service de placement professionnel,<br><br> pour toutes mécanisme de stores, motorisé ou
 
-manuel, rails, tringle, cache rails et placement de vos tentures. <br>
+manuel, rails, tringle, cache rails et placement de vos tentures. <br><br>
 
 Nous mettons tout en oeuvre pour vous satisfaire et nous fournissons un vrai service sur mesure.</p>
       <div class="center">
