--- a/source/stores/bienvenue.html.erb
+++ b/source/stores/bienvenue.html.erb
@@ -9,7 +9,7 @@ title: IORGU SPRL Stores
     <div class="col s12 m6">
       <p> Faites appel a nos spécialistes pour la décorations de vos fenêtres: rideaux et voilages, stores américains,
 
-stores vénitiens, stores californiens, stores enrouleurs, panneaux japonais, motorisation. <br><br>
+stores vénitiens, stores californiens, stores enrouleurs, panneaux japonais. <br><br>
 
 Nous vous proposons un service de placement professionnel, pour toutes mécanisme de stores, motorisé ou
 
