--- a/source/stores/bienvenue.html.erb
+++ b/source/stores/bienvenue.html.erb
@@ -7,14 +7,26 @@ title: IORGU SPRL Stores
 <div class="container">
   <div class="row">
     <div class="col s12 m6">
-      <p> Faites appel a nos spécialistes pour la décorations de vos fenêtres: rideaux et voilages, stores américains,
+      <p> Faites appel à nos spécialistes pour la décorations de vos fenêtres:</p>
+      <ul>
+        <li>rideaux</li>
+        <li>voilages</li>
+        <li>stores américains, vénities, californiens et enrouleurs</li>
+        <li>panneaux japonais</li>
+      </ul>
 
-stores vénitiens, stores californiens, stores enrouleurs, panneaux japonais. <br><br>
-
+<p>
+<br>
 Nous vous proposons un service de placement professionnel, pour toutes mécanisme de stores, motorisé ou
 
-manuel, rails, tringle, cache rails et placement de vos tentures. <br><br>
-
+manuel :</p>
+<ul>
+  <li>rails</li>
+  <li>tringle</li>
+  <li>cache rails</li>
+  <li>placement de vos tentures</li>
+</ul>
+<p>
 Nous mettons tout en oeuvre pour vous satisfaire et nous fournissons un vrai service sur mesure.</p>
       <div class="center">
         <%= image_tag 'stores.jpeg', :class=> "responsive-img" %>
