--- a/source/nettoyage/bienvenue.html.erb
+++ b/source/nettoyage/bienvenue.html.erb
@@ -1,8 +1,8 @@
 ---
-title: Iorgu SPRL  nettoyage
+title: Iorgu SPRL  nettoyage professionnel
 
 ---
-<h1 class="flow-text center">Nettoyage</h1>
+<h1 class="flow-text center">Nettoyage professionnel</h1>
 <div class="container">
 <div class="row">
 <div class="col s12 m6">
@@ -12,7 +12,7 @@ environnement de travail sain, propre et agréable pour votre personnel. L’ent
 
 commerciaux est notre activité principale. <br>
 
-Faites appel a notre équipe de professionnels qui répondra a vos exigences relatives a la maintenance de
+Faites appel à notre équipe de professionnels qui répondra à vos exigences relatives à la maintenance de
 
 vos bureaux et locaux.</p>
 <div class="center">
