--- a/source/stores/bienvenue.html.erb
+++ b/source/stores/bienvenue.html.erb
@@ -7,27 +7,23 @@ title: IORGU SPRL Stores
 <div class="container">
   <div class="row">
     <div class="col s12 m6">
-      <p> Faites appel à nos spécialistes pour la décorations de vos fenêtres:</p>
-      <ul>
-        <li>rideaux</li>
-        <li>voilages</li>
-        <li>stores américains, vénities, californiens et enrouleurs</li>
-        <li>panneaux japonais</li>
+      <p> Faites appel à nos spécialistes pour la décoration de vos fenêtres:</p>
+      <ul class="browser-default">
+        <li>Rideaux et voilages</li>
+        <li>Stores américains, vénitiens, californiens, enrouleurs, duo</li>
+        <li>Panneaux japonais</li>
       </ul>
 
 <p>
 <br>
-Nous vous proposons un service de placement professionnel, pour toutes mécanisme de stores, motorisé ou
-
-manuel :</p>
-<ul>
-  <li>rails</li>
-  <li>tringle</li>
-  <li>cache rails</li>
-  <li>placement de vos tentures</li>
-</ul>
+Nous vous proposons un service de placement professionnel selon le mécanisme choisit:
 <p>
-Nous mettons tout en oeuvre pour vous satisfaire et nous fournissons un vrai service sur mesure.</p>
+<ul class="browser-default">
+<li>Motorisé ou manuel</li>
+<li>Rails et cache rails</li>
+<li>Tringle</li>
+</ul>
+<p>Nous mettons tout en oeuvre pour vous satisfaire et nous fournissons un vrai service sur mesure.</p>
       <div class="center">
         <%= image_tag 'stores.jpeg', :class=> "responsive-img" %>
       </div>
