--- a/source/nettoyage/bienvenue.html.erb
+++ b/source/nettoyage/bienvenue.html.erb
@@ -16,7 +16,7 @@ Faites appel à notre équipe de professionnels qui répondra à vos exigences r
 
 vos bureaux et locaux.</p>
 <div class="center">
-<%= image_tag "outils.jpg", :class => "responsive-img center" %>
+<%= image_tag "accueil-nettoyage.jpg", :class => "responsive-img center" %>
 </div>
 </div>
 <div class="col s12 m6 right">
