--- a/source/stores/bienvenue.html.erb
+++ b/source/stores/bienvenue.html.erb
@@ -25,7 +25,7 @@ Nous vous proposons un service de placement professionnel selon le mécanisme ch
 </ul>
 <p>Nous mettons tout en oeuvre pour vous satisfaire et nous fournissons un vrai service sur mesure.</p>
       <div class="center">
-        <%= image_tag 'stores.jpeg', :class=> "responsive-img" %>
+        <%= image_tag 'accueil-stores.jpg', :class=> "responsive-img" %>
       </div>
     </div>
     <div class="col s12 m6">
